--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -4,6 +4,10 @@ on:
   push:
     branches: ["main"]
 
+permissions:
+  contents: read
+  packages: write
+
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
@@ -11,9 +15,6 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    - name: Build Docker image
-      run: |
-        docker build -t ghcr.io/${{ github.repository_owner }}/nombre-repo:latest .
     - name: Log in to GitHub Container Registry
       uses: docker/login-action@v2
       with:
@@ -21,9 +22,13 @@ jobs:
         username: ${{ github.repository_owner }}
         password: ${{ secrets.GITHUB_TOKEN }}
 
+    - name: Build Docker image
+      run: |
+        docker build -t ghcr.io/${{ github.repository_owner }}/arquitectura-lab1:latest .
+
     - name: Push to GHCR
       run: |
-        docker push ghcr.io/${{ github.repository_owner }}/nombre-repo:latest
+        docker push ghcr.io/${{ github.repository_owner }}/arquitectura-lab1:latest
 
   deploy:
     needs: build-and-push
